lib/queries.ts:
* collateralBalanceLongInitial and collateralBalanceShortInitial replaced by collateralBalanceGross and gradient
* redemptionAmountLongToken and redemptionAmountShortToken renamed to payoutLong and payoutShort
* redemptionFee renamed to protocol fee
* supplyInitial dropped


* calcPayoffsPerToken, calcBreakEven and maxPayout functions updated


To check:
* ...



TODO:
- Remove diva-contracts folder 
  -> Load DIVA ABI from ABI file, i.e. replace `import ERC20_ABI from '@diva/contracts/abis/erc20.json'`
- Replace `import ERC20 from '@diva/contracts/abis/erc20.json'`
- Update governance parameter call for submission periods

QUESTIONS:
- Remove `convertExponentialToDecimal` in calcPayoffsPerToken.ts?
- Settlement periods are not longer general but pool specific -> adjust